# docker-registry-client-rs

./: Cargo.toml  README.md
examples/: get_manifest.rs
resources/: fetch_token  registry.access.redhat.com
resources/manifest/image/: example.json
resources/manifest/list/: example.json  trivy.json  vaultwarden.json
resources/manifest/single/: external-secrets-operator.json
resources/manifest/v1_compatibility/: external-secrets-operator.json
src/: docker.rs  image.rs  image_name.rs  lib.rs  main.rs  manifest.rs
src/docker/: error.rs  token.rs  token_cache.rs
src/docker/snapshots/: docker_registry_client__docker__token__tests__token__deserialize__dockerhub.snap  docker_registry_client__docker__token__tests__token__deserialize__github.snap
src/image/: image_name.rs  registry.rs
src/image/image_name/: digest.rs  tag.rs
src/snapshots/: docker_registry_client__docker__tests__dockerhub__alpine.snap  docker_registry_client__docker__tests__get_manifest_dockerhub.snap  docker_registry_client__docker__tests__redhat__cosign.snap  docker_registry_client__docker__tests__redhat__playwright.snap  docker_registry_client__docker__tests__redhat__ubi8.snap  docker_registry_client__manifest__tests__list__deserialize__example.snap  docker_registry_client__manifest__tests__list__deserialize__trivy.snap  docker_registry_client__manifest__tests__list__deserialize__vaultwarden.snap  docker_registry_client__manifest__tests__v1_compatibility__deserialize__example.snap  docker_registry_client_rs__manifest__tests__image__deserialize__example.snap  docker_registry_client_rs__manifest__tests__single__deserialize__example.snap  docker_registry_client_rs__manifest__tests__v1_compatibility__deserialize__example.snap  docker_registry_rs__manifest__tests__image__deserialize__example.snap  docker_registry_rs__manifest__tests__list__deserialize__example.snap  docker_registry_rs__manifest__tests__list__deserialize__trivy.snap
