[package]
name = "docker-registry-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dyn-clone = "1"
either = "1"
redis-macros = { version = "0.4", optional = true }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"], optional = true }
reqwest = { version = "0.12", default-features = false, features = [ "json", "rustls-tls", ] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }

[features]
default = ["redis_cache"]
redis_cache = ["redis"]

[dev-dependencies]
eyre = "0.6"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
