[package]
name = "docker-registry-client"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"

authors = ["Alexander Thaller <alexander@thaller.ws>"]
description = "Communicate with Docker Registries to fetch image metadata."
documentation = "https://docs.rs/docker-registry-client/"
homepage = "https://github.com/AlexanderThaller/docker-registry-client"
keywords = ["docker", "registry", "metadata", "client"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/docker-registry-client"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dyn-clone = "1"
either = "1"
redis-macros = { version = "1", optional = true }
redis = { version = "1", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }

[features]
default = ["redis_cache"]
redis_cache = ["redis"]

[dev-dependencies]
eyre = "0.6"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"

[lints.rust]
#missing-docs = "warn"
missing-debug-implementations = "warn"
rust-2018-idioms = "warn"
unsafe-code = "forbid"
unused-lifetimes = "warn"

[lints.clippy]
allow-attributes = "warn"
allow-attributes-without-reason = "warn"
dbg-macro = "warn"
pedantic = "warn"
todo = "warn"
unwrap-used = "warn"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
